<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/OutstandingTasks_title_tv_id"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/main_title_tv_text"
        android:textAppearance="@style/CustumTitle"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/main_newRoom_btn_id"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:text="@string/main_newRoom_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/main_newTask_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OutstandingTasks_title_tv_id" />

    <Button
        android:id="@+id/main_newTask_btn_id"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/main_newTask_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/main_OutstandingTasks_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_newRoom_btn_id" />

    <Button
        android:id="@+id/main_OutstandingTasks_btn_id"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/main_OutstandingTasks_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/main_OverviewOfRooms_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_newTask_btn_id" />

    <Button
        android:id="@+id/main_OverviewOfRooms_btn_id"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="166dp"
        android:text="@string/main_OverviewOfRooms_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_OutstandingTasks_btn_id" />

</androidx.constraintlayout.widget.ConstraintLayout>